2008-02-18  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (main): Set up the recent files manager
	earlier, not after we try to add stuff to it when starting
	up with arguments...

2008-02-17  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	  (bacon_video_widget_get_mrls):
	  Don't use the GST_TIME_AS_SECONDS macro for now, since
	  it only appeared in GStreamer 0.10.16. (Closes: #516853)

2008-02-17  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/totem-playlist.c: (drop_cb):
	* src/totem.c: (totem_action_drop_files): Use
	g_uri_list_extract_uris instead of gnome_vfs_uri_list_parse
	for drop targets. (Closes: #512600)

2008-02-17  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/totem.c: (main): Patch from Riccardo Lucchese
	to set up the recent files list later on in startup.
	(Helps: #514087)

2008-02-15  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/org_gnome_totem_PluginViewer.xml:
	* browser-plugin/totem-plugin-viewer-constants.h:
	* browser-plugin/totempluginviewer-marshal.list:
	* browser-plugin/totem-plugin-viewer.c:
	(totem_embedded_class_init), (totem_embedded_save_volume),
	(totem_embedded_stop), (totem_embedded_set_volume),
	(totem_embedded_set_fullscreen),
	(totem_embedded_toggle_fullscreen), (cb_vol), (on_tick),
	(totem_embedded_action_volume_relative),
	(totem_embedded_construct):
	Implement a property change signal when fullscreen state
	or volume changes

	* browser-plugin/totemPlugin.cpp:
	* browser-plugin/totemPlugin.h: As above and implement
	SetFullscreen()

	* browser-plugin/totemComplexPlugin.cpp:
	* browser-plugin/totemComplexPlugin.h:
	* browser-plugin/totemGMPSettings.cpp:
	* browser-plugin/totemGMPSettings.h:
	* browser-plugin/totemNarrowSpacePlugin.cpp:
	* browser-plugin/totemNarrowSpacePlugin.h:
	Fix for changes above

	* browser-plugin/totemConePlugin.cpp:
	* browser-plugin/totemConePlugin.h:
	Implement ToggleFullscreen/ToggleMute, state, mute,