@@ -1,3 +1,14 @@
+2008-02-20  Bastien Nocera  <hadess@hadess.net>
+
+	* browser-plugin/idl/totemIMullYPlayer.idl:
+	Implement from documentation
+	* browser-plugin/totemMullYPlugin.cpp:
+	Implement stubs for the DivX Web Player Javascript
+	interface (Closes: #354856)
+
+	* browser-plugin/totemConePlugin.cpp:
+	Fix warning
+
 2008-02-18  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem.c: (main): Set up the recent files manager
